--- a/public/css/report.css
+++ b/public/css/report.css
@@ -14,11 +14,20 @@
 
 }
 .sidebar {
-    width: 50%;
-    height: 100%;
     background-color: #fff;
 }
 
 .main-row {
     height: 50%;
 }
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
+    text-align: center;
+  }
+  </style>
