--- a/public/css/style.css
+++ b/public/css/style.css
@@ -288,11 +288,10 @@ body{
     margin: 0;
 }
 
-.bg-box {
-    background-color: rgb(0, 0, 0);
-    /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.4);
-    /* Black w/opacity/see-through */
+/* Position text in the middle of the page/image */
+  .bg-box {
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4); /* Black w/opacity/see-through */
     position: absolute;
     top: 50%;
     left: 50%;
@@ -300,7 +299,11 @@ body{
     z-index: 2;
     height: 100%;
     width: 100%;
-}
+    padding: 20px;
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+
 
 html,body {
 	height: 100%;
@@ -377,5 +380,3 @@ body.my-login-page {
 		padding: 15px;
 	}
 }
-
-
