--- a/public/style/assets/scss/style.css
+++ b/public/style/assets/scss/style.css
@@ -1367,7 +1367,7 @@ header .form-inline {
   width: 100%; }
 
 .card {
-  margin-bottom: 1.5rem;
+  /* margin-bottom: 1.5rem; */
   border-radius: 0; }
   .card h4 {
     font-size: 1.1rem; }
